<?xml version="1.0" encoding="UTF-8"?>
<!--
~ Copyright (C) 2014 the original author or authors.
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~ http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>au.net.zeus</groupId>
        <artifactId>jgdms</artifactId>
        <version>3.1.1-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <groupId>au.net.zeus.jgdms</groupId>
    <artifactId>jgdms-collections</artifactId>
    <packaging>jar</packaging>

    <name>Module :: JGDMS Collection</name>
    <description>Apache JGDMS Collection, Thread and Executor utilities
    </description>

    <properties>
        <high.scale.lib.version>1.0.6</high.scale.lib.version>
    </properties>

    <dependencies>  
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
     </dependencies>

    <build>
        <plugins>   
            <plugin>
              <groupId>biz.aQute.bnd</groupId>
              <artifactId>bnd-maven-plugin</artifactId>
              <executions>
                    <execution>
                        <goals>
                            <goal>bnd-process</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>  
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
	                <release>21</release>
                        <debug>true</debug>
                        <encoding>UTF-8</encoding>
                        <meminitial>128m</meminitial>
                        <maxmem>1024m</maxmem>
                    </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <!--<additionalDependencies>
                        <additionalDependency>
                          <groupId>au.net.zeus.jgdms</groupId>
                          <artifactId>jgdms-lib</artifactId>
                          <version>${project.version}</version>
                        </additionalDependency>
                        <additionalDependency>
                          <groupId>au.net.zeus.jgdms</groupId>
                          <artifactId>jgdms-lib-dl</artifactId>
                          <version>${project.version}</version>
                        </additionalDependency>
                    </additionalDependencies>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <configuration>
                    <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
